--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         tools:targetApi="32">
         <activity
             android:usesCleartextTraffic="true"
+            android:configChanges="orientation|screenSize"
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
